K8s/DeployCustomers.yml
---
# suinsit aplicacion
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: customers-apps
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: customers-apps
  replicas: 1    
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: customers-apps
    spec:
      containers:
# image to suinsit-app
      - image: 2w1x0a76.gra7.container-registry.ovh.net/suinsit-proyect/enartsystems/suinsit-customers:2.0.4
        name: customers-apps
        resources:
          requests:
            memory: "512Mi"
            cpu: "50m"
          limits:
            memory: "2048Mi"
            cpu: "750m"
        ports:
        - containerPort: 8080
          #hostPort: 8080
          #name: labs-app
        volumeMounts:
        - name: suinsit-persistent-storage
          mountPath: /opt/suinsit
          subPath: suinsit
        
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: suinsit-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-suinsit
---
apiVersion: v1
kind: Service
metadata:
  name: customers-apps
  namespace: suin-dolcezza
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: customers-apps
