K8s/DeployDiscovery.yml
---
# suinsit aplicacion
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: discovery-apps
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: discovery-apps
  replicas: 1    
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: discovery-apps
    spec:
      containers:
      - image: 2w1x0a76.gra7.container-registry.ovh.net/enartsystems/discovery-application-ecom:1.0.2
        name: discovery-apps
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "3048Mi"
            cpu: "2"
        ports:
        - containerPort: 8080
          #hostPort: 8080
          #name: labs-app
        volumeMounts:
        - name: suinsit-persistent-storage
          mountPath: /opt/suinsit
          subPath: suinsit
        
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: suinsit-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-suinsit 
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-apps
  namespace: suin-dolcezza
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: discovery-apps
