K8s/DeployTitan.yml
---
# suinsit aplicacion
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: titan-apps
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: titan-apps
  replicas: 1    
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: titan-apps
    spec:
      containers:
      - image: 2w1x0a76.gra7.container-registry.ovh.net/enartsystems/titan-application:2.0.15
        name: titan-apps
        resources:
          requests:
            memory: "1024Mi"
            cpu: "0.5"
          limits:
            memory: "3000Mi"
            cpu: "1"
        ports:
        - containerPort: 8080
          #hostPort: 8080
          #name: labs-app
        volumeMounts:
        - name: suinsit-persistent-storage
          mountPath: /opt/suinsit
          subPath: suinsit
        
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: suinsit-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-suinsit 
---
apiVersion: v1
kind: Service
metadata:
  name: titan-apps
  namespace: suin-dolcezza
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: titan-apps
