K8s/Deployment-core.yml
---
# ejemplo para clientes con su propio namespace
kind: Namespace
apiVersion: v1
metadata:
  name: suin-dolcezza
---
# storage to suinsit
---
    kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: pvc-suinsit
      namespace: suin-dolcezza
    spec:
      storageClassName: "nfs"
      accessModes:
        - ReadWriteMany
      resources:
        requests:
          storage: 20Gi
---
# deployment base de datos dedicada
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: postgres
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:15.4-alpine3.18
        name: postgres
        resources:
          requests:
            memory: "1024Mi"
            cpu: "0.5"
          limits:
            memory: "2024Mi"
            cpu: "1.5"
        ports:
        - containerPort: 5432
          #hostPort: 5432
          #name: postgres
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres 
        - name: max-conns
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: max-conns
        configMap:
            name: max-conns    
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-pgsql
      
      
---
# -- suinsit - sidecar 
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: sidecar
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: sidecar
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sidecar
    spec:
      containers:
# image to suinsit-app
      - image: 2w1x0a76.gra7.container-registry.ovh.net/suinsit-core/suinsit/sidecar:1.1.19
        name: sidecar
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "2048Mi"
            cpu: "750m"
        volumeMounts:
        - name: suinsit-persistent-storage
          mountPath: /opt/suinsit
          subPath: suinsit
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: suinsit-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-suinsit           

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: suin-dolcezza
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-tcp
  namespace: suin-dolcezza
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
