K8s/DeploymentAnalizer.yml
---
# suinsit aplicacion
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mic-discovery-formanalizer
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: mic-discovery-formanalizer
  replicas: 1    
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: mic-discovery-formanalizer
    spec:
      containers:
# image to suinsit-app
      - image: 2w1x0a76.gra7.container-registry.ovh.net/suinsit-core/suinsit/mic-discovery-formanalizer:1.0.10
        name: mic-discovery-formanalizer
        resources:
          requests:
            memory: "512Mi"
            cpu: "50m"
          limits:
            memory: "2048Mi"
            cpu: "750m"
        ports:
        - containerPort: 9000
          #hostPort: 8080
          #name: labs-app
        volumeMounts:
        - name: suinsit-persistent-storage
          mountPath: /opt/suinsit
          subPath: suinsit
        
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: suinsit-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-suinsit
---
apiVersion: v1
kind: Service
metadata:
  name: mic-discovery-formanalizer
  namespace: suin-dolcezza
spec:
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: mic-discovery-formanalizer
