K8s/DeploymentApi.yml
---
# suinsit aplicacion
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: suinsit-crm-api
  namespace: suin-dolcezza
spec:
  selector:
    matchLabels:
      app: suinsit-crm-api
  replicas: 1    
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: suinsit-crm-api
    spec:
      containers:
# image to suinsit-app
      - image:  2w1x0a76.gra7.container-registry.ovh.net/suinsit-proyect/mic-suinsit-api:1.0.1
        name: suinsit-crm-api
        resources:
          requests:
            memory: "512Mi"
            cpu: "50m"
          limits:
            memory: "2048Mi"
            cpu: "750m"
        ports:
        - containerPort: 9002
          #hostPort: 8080
          #name: labs-app
        volumeMounts:
        - name: suinsit-persistent-storage
          mountPath: /opt/suinsit
          subPath: suinsit
        
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: suinsit-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-suinsit
---
apiVersion: v1
kind: Service
metadata:
  name: suinsit-crm-api
  namespace: suin-dolcezza
spec:
  ports:
  - port: 80
    targetPort: 9002
  selector:
    app: suinsit-crm-api
